--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,21 @@ body {
 }
 
 @layer components {
+  @property --angle {
+    syntax: "<angle>";
+    inherits: false;
+    initial-value: 0deg;
+  }
+
+  @keyframes animate-angle {
+    from {
+      --angle: 0deg;
+    }
+    to {
+      --angle: 360deg;
+    }
+  }
+
   .hide-scrollbar::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
   }
@@ -50,7 +65,7 @@ body {
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #29441f;
+  background-color: #505050;
 }
 
 *::-webkit-scrollbar-thumb:active {
